# MAL-GerDubs

./: README.md  mal-dubs.user.js
css/: style.css
data/: dubInfo.json
gen_data/: Cargo.toml
gen_data/src/: anisearch.rs  cli.rs  database.rs  logger.rs  main.rs  output.rs
