[package]
name = "mal_gerdubs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
indicatif-log-bridge = "0.2.2"
indicatif = "0.17.6"
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.30"
